# libre2-java

./: .gitignore  ARCHITECTURE.md  BASELINE_PERFORMANCE.md  CHANGELOG.md  CHECKSTYLE_ASSESSMENT.md  CONFIGURATION.md  CRITICAL_BUG_ANALYSIS.md  CRITICAL_REVIEW.md  DECISION_LOG.md  DEVELOPMENT_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  JNI_MOCKABILITY_DESIGN.md  JNI_MOCKABILITY_DESIGN_V2.md  JNI_OPTIMIZATION_ANALYSIS.md  JNI_OPTIMIZATION_CONCLUSION.md  KNOWN_ISSUES.md  LOGGING_GUIDE.md  METRIC_RENAMING_MAP.txt  MOCKABILITY_ASSESSMENT.md  NATIVE_CACHE_MIGRATION_SESSION.md  NEXT_SESSION_PROMPT.md  NOTICE  PATTERN_CACHE_FIXES_REQUIRED.md  PATTERN_OPTIMIZATION_PLAN.md  PHASE0_CACHE_ANALYSIS.md  PHASE0_CORRECTIONS.md  PHASE0_DECISIONS_FINAL.md  PHASE1_COVERAGE_ANALYSIS.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE1_TEST_INVENTORY.md  PHASE_123_REMEDIATION_PLAN.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_FINAL_PLAN.md  PHASE_4_IMPLEMENTATION_PLAN.md  QUICKSTART.md  QUICK_WINS_TONIGHT.md  RE2_GAP_IMPLEMENTATION.md  (+19 more)
.github/workflows/: build-native.yml  test-platforms.yml
config/checkstyle/: checkstyle-suppressions.xml  google_checks.xml
docs/archive/analysis/: JNI_MIGRATION.md  MEMORY_SAFETY_AUDIT.md  METRICS_AUDIT.md  METRICS_VERIFICATION.md  METRIC_NAMING_REVIEW.md  THREAD_SAFETY.md  THREAD_SAFETY_ANALYSIS.md
docs/archive/planning/: ARCHITECTURE_DECISIONS.md  CLEANUP_SUMMARY_FOR_REVIEW.md  CODE_CLEANUP_ANALYSIS.md  DECISION_LOG.md  DESIGN_DECISIONS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_4A_COMPLETE.md  PHASE_4B_COMPLETE.md  PHASE_4_FINAL_SUMMARY.md  PHASE_4_IMPLEMENTATION_REVIEW.md  PHASE_4_MULTIMODULE_ARCHITECTURE.md  PHASE_4_READY_TO_IMPLEMENT.md  PHASE_4_SUMMARY.md
libre2-cassandra/: pom.xml
libre2-cassandra-5.0/: pom.xml
libre2-core/: README.md  pom.xml
libre2-core/src/integration-test/java/com/axonops/libre2/: RE2IT.java
libre2-core/src/integration-test/java/com/axonops/libre2/api/: BulkMatchingIT.java  BulkMatchingTypeSafetyIT.java  ByteBufferApiIT.java  CaptureGroupsIT.java  Phase1ExtensionsIT.java  ReplaceOperationsIT.java
libre2-core/src/integration-test/java/com/axonops/libre2/cache/: CacheFullInUseIT.java  CacheIT.java  ConcurrencyIT.java  ConcurrentCleanupIT.java  DeferredCleanupTimingIT.java  EvictionEdgeCasesIT.java  EvictionWhileInUseIT.java  IdleEvictionIT.java  NativeMemoryTrackingIT.java  ResourceLimitConfigurationIT.java  ThreadSafetyIT.java
libre2-core/src/integration-test/java/com/axonops/libre2/dropwizard/: JmxIntegrationIT.java  MetricsEndToEndIT.java
libre2-core/src/integration-test/java/com/axonops/libre2/jni/: RE2NativeJNIIT.java
libre2-core/src/integration-test/java/com/axonops/libre2/metrics/: ComprehensiveMetricsIT.java  MetricsIntegrationIT.java  NativeMemoryMetricsIT.java  TimerHistogramIT.java
libre2-core/src/main/java/com/axonops/libre2/api/: MatchResult.java  Matcher.java  NativeLibraryException.java  Pattern.java  PatternCompilationException.java  RE2.java  RE2Exception.java  RE2TimeoutException.java  ResourceException.java  ZeroCopyPattern.java  ZeroCopyRE2.java
libre2-core/src/main/java/com/axonops/libre2/cache/: CacheStatistics.java  PatternCache.java  (+2 more)
libre2-core/src/main/resources/native/: README.md
libre2-core/src/main/resources/native/darwin-aarch64/: libre2.dylib
libre2-core/src/main/resources/native/darwin-x86_64/: libre2.dylib
libre2-core/src/test/java/com/axonops/libre2/: HelloWorldTest.java  RE2Test.java
libre2-core/src/test/resources/: logback-test.xml
libre2-dropwizard/: README.md  pom.xml
native/: .gitignore  BULK_OFFHEAP_DESIGN.md  CMakeLists.txt  COMPLETE_RE2_API_INVENTORY.md  CRITICAL_MISSING_FUNCTIONALITY.md  Dockerfile  JNI_ANALYSIS.md  NEXT_SESSION_TASKS.md  PATTERN_OPTIONS_DESIGN.md  PHASE_1_2_5_GAP_ANALYSIS.md  PHASE_1_2_5_IMPLEMENTATION_LOG.md  PHASE_1_2_5g_EXECUTION_PLAN.md  PHASE_1_2_5g_TEST_REORGANIZATION.md  PHASE_1_2_5h_ARG_IMPLEMENTATION.md  PHASE_1_2_PLAN.md  PHASE_1_COMPLETE_SUMMARY.md  PHASE_1_FINAL_COMPLETION_RECORD.md  RE2_API_COMPLETE_REQUIREMENTS.md  README.md  SESSION_2025-11-30_WORKFLOW_TRIGGER.md  SESSION_PROGRESS.md  TESTING_GUIDELINES.md  WRAPPER_API_FINAL_DESIGN.md  re2-implementation-checklist.md  re2-public-api-reference.md  re2_api_readme.md
native/jni/: com_axonops_libre2_jni_RE2NativeJNI.h
native/scripts/: build.sh  build_tests.sh
native/tests/: CMakeLists.txt  libre2_api_test.cpp  libre2_cache_test.cpp
native/tests/cache/: cache_config_test.cpp  cache_manager_test.cpp  cache_metrics_test.cpp  deferred_cache_test.cpp  eviction_thread_test.cpp  integration_test.cpp  leak_test.cpp  murmur_hash3_test.cpp  pattern_cache_test.cpp  result_cache_test.cpp  stress_test.cpp
native/wrapper/: libre2_api.cpp  libre2_api.h  pattern_options.cpp  pattern_options.h  re2_jni.cpp  re2_wrapper.cpp
native/wrapper/cache/: cache_config.cpp  cache_config.h  cache_manager.cpp  cache_manager.h  cache_metrics.cpp  cache_metrics.h  deferred_cache.cpp  deferred_cache.h  eviction_thread.cpp  eviction_thread.h  murmur_hash3.cpp  murmur_hash3.h  pattern_cache.cpp  pattern_cache.h  result_cache.cpp  result_cache.h
perf-test/: pom.xml
src/main/java/com/axonops/libre2/api/: Matcher.java  NativeLibraryException.java  Pattern.java  PatternCompilationException.java  RE2.java  RE2Exception.java  RE2TimeoutException.java  ResourceException.java
src/main/java/com/axonops/libre2/cache/: CacheStatistics.java  IdleEvictionTask.java  PatternCache.java  RE2Config.java
src/main/java/com/axonops/libre2/jni/: RE2LibraryLoader.java  RE2Native.java
src/main/java/com/axonops/libre2/util/: ResourceTracker.java
src/main/resources/native/darwin-aarch64/: libre2.dylib
src/main/resources/native/darwin-x86_64/: libre2.dylib
src/test/java/com/axonops/libre2/: RE2Test.java
src/test/java/com/axonops/libre2/cache/: CacheFullInUseTest.java  CachePerformanceTest.java  CacheTest.java  ConcurrencyTest.java  ConcurrentCleanupTest.java  ConfigurationTest.java  EvictionEdgeCasesTest.java  IdleEvictionTest.java  NativeMemoryTrackingTest.java  StressTest.java
(+53 files in other folders)
